# pymol-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README-Ko-KR.md  README.md  env.yml  generate_cover.py  llms-install.md  pyproject.toml
src/pymol_mcp/: __init__.py  __main__.py  server.py  session.py  stdio_guard.py
src/pymol_mcp/analysis/: __init__.py  cage.py  geometry.py  gro.py  hbond.py  order_params.py
src/pymol_mcp/tools/: __init__.py
tests/: conftest.py  test_analysis.py  test_domain_integration.py  test_functional.py  test_md.py  test_stdio_purity.py
tests/fixtures/: hydrate_sH.gro  hydrate_sI.gro  hydrate_sII.gro
video/: .gitignore  README.md  gen_frames.py  package-lock.json  package.json  tsconfig.json
video/src/: Demo.tsx  Root.tsx
